<resources>
    <string name="Album">Album</string>
    <string name="AllPhotos">All Photos</string>
    <string name="AllVideo">All Videos</string>
    <string name="AttachPhoto">Photo</string>
    <string name="Cancel">Cancel</string>
    <string name="ClearButton">Clear</string>
    <string name="ClearSearch">Clear search history?</string>
    <string name="Crop">CROP</string>
    <string name="MostSelect">You can select up to %d pictures</string>
    <string name="NoPhotos">No photos yet</string>
    <string name="NoRecentGIFs">No recent GIFs</string>
    <string name="NoRecentPhotos">No recent photos</string>
    <string name="NoResult">No results</string>
    <string name="NoVideo">No videos yet</string>
    <string name="Of">%1$d of %2$d</string>
    <string name="PickerPhotos">Photos</string>
    <string name="PickerVideo">Video</string>
    <string name="Preview">Preview</string>
    <string name="SearchGifs">FIND GIFS</string>
    <string name="SearchGifsTitle">Search GIFs</string>
    <string name="SearchImages">FIND IMAGES</string>
    <string name="SearchImagesInfo">WEB SEARCH</string>
    <string name="SearchImagesTitle">Search web</string>
    <string name="Send">Done</string>
    <string name="Set">Set</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">帐户</string>
    <string name="activity_blacklisted_users">列入黑名单的用户</string>
    <string name="activity_block_success">用户被阻止</string>
    <string name="activity_block_user">拉黑</string>
    <string name="activity_chat_details_cancel_send">取消发送</string>
    <string name="activity_chat_details_copy">复制</string>
    <string name="activity_chat_details_copy_success">复制成功</string>
    <string name="activity_chat_details_delete">撤回</string>
    <string name="activity_chat_details_delete_for_everyone">為大家刪除</string>
    <string name="activity_chat_details_delete_for_myself">删除</string>
    <string name="activity_chat_details_delete_someone">%s 撤回了一条消息</string>
    <string name="activity_chat_details_edit">编辑</string>
    <string name="activity_chat_details_edit_message">编辑讯息</string>
    <string name="activity_chat_details_edited">已编辑</string>
    <string name="activity_chat_details_et_hint">信息</string>
    <string name="activity_chat_details_forward">转发</string>
    <string name="activity_chat_details_forward_to">转发…</string>
    <string name="activity_chat_details_forwarded_album_messages_count">%d 个相册消息</string>
    <string name="activity_chat_details_forwarded_audio_messages_count">%d 条语音留言</string>
    <string name="activity_chat_details_forwarded_file_messages_count">%d 个文件信息</string>
    <string name="activity_chat_details_forwarded_from">从</string>
    <string name="activity_chat_details_forwarded_image_messages_count">%d 条图像消息</string>
    <string name="activity_chat_details_forwarded_location_messages_count">%d 条位置信息</string>
    <string name="activity_chat_details_forwarded_message">转发消息</string>
    <string name="activity_chat_details_forwarded_messages_count">%d 条消息</string>
    <string name="activity_chat_details_forwarded_text_messages_count">%d 条短信</string>
    <string name="activity_chat_details_forwarded_video_messages_count">%d 条视频信息</string>
    <string name="activity_chat_details_left_swipe_cancel">左滑取消</string>
    <string name="activity_chat_details_message_unpinned">已取消了某一条的置顶消息</string>
    <string name="activity_chat_details_pin_error">引脚操作错误</string>
    <string name="activity_chat_details_pin_message">固定讯息</string>
    <string name="activity_chat_details_pin_message_prompt">您确定要置顶此消息吗？</string>
    <string name="activity_chat_details_pinned_message">固定讯息</string>
    <string name="activity_chat_details_pinned_message_hint" formatted="false">%s 固定 %s</string>
    <string name="activity_chat_details_play_failed">播放遇到了一点问题</string>
    <string name="activity_chat_details_play_send">发送于 %s</string>
    <string name="activity_chat_details_reconnect">重新连接…</string>
    <string name="activity_chat_details_record_audio_time_min">录制时间不得小于%d秒</string>
    <string name="activity_chat_details_reply">回复</string>
    <string name="activity_chat_details_save">保存</string>
    <string name="activity_chat_details_save_file">保存存档</string>
    <string name="activity_chat_details_sync">同步聊天…</string>
    <string name="activity_chat_details_tools_camera">相机</string>
    <string name="activity_chat_details_tools_file">文件</string>
    <string name="activity_chat_details_tools_image">图片</string>
    <string name="activity_chat_details_tools_video">视频</string>
    <string name="activity_chat_details_typing">正在输入</string>
    <string name="activity_chat_details_unpin_message">取消固定消息</string>
    <string name="activity_chat_details_unpin_message_prompt">您确定要取消固定此消息吗？</string>
    <string name="activity_chat_details_up_cancel">松开取消</string>
    <string name="activity_chat_group_manager_title">群聊管理</string>
    <string name="activity_chose_new_chat_type_chat_room">聊天室</string>
    <string name="activity_chose_new_chat_type_group">群聊</string>
    <string name="activity_chose_new_chat_type_single">单聊</string>
    <string name="activity_chose_new_chat_type_title">选择创建类型</string>
    <string name="activity_contact_list_error">无法获取联系人列表</string>
    <string name="activity_contacts">联络人</string>
    <string name="activity_create_chat_add">添加</string>
    <string name="activity_create_chat_chat_name_group">%s的群聊</string>
    <string name="activity_create_chat_chat_name_single">与%1$s聊天</string>
    <string name="activity_create_chat_create">创建</string>
    <string name="activity_create_chat_create_success">创建成功</string>
    <string name="activity_create_chat_empty">没有数据</string>
    <string name="activity_create_chat_failed">创建失败:%s</string>
    <string name="activity_create_chat_group_title">选择群聊成员</string>
    <string name="activity_create_chat_please_add_member">请添加成员</string>
    <string name="activity_create_chat_please_add_name">请添加组名</string>
    <string name="activity_create_chat_single_title">选择单聊成员</string>
    <string name="activity_empty_black_contact_list">你的黑名单是空的</string>
    <string name="activity_failed_to_block">无法阻止用户</string>
    <string name="activity_failed_to_follow">无法追踪使用者</string>
    <string name="activity_failed_to_unblock">无法取消阻止用户</string>
    <string name="activity_failed_to_unfollow">取消关注用户失败</string>
    <string name="activity_follow_success">用户关注</string>
    <string name="activity_follow_user">关注用户</string>
    <string name="activity_group_manager_add_bannered">禁言</string>
    <string name="activity_group_manager_add_manager">添加管理员</string>
    <string name="activity_group_manager_add_member">添加</string>
    <string name="activity_group_manager_creator">创建者</string>
    <string name="activity_group_manager_hide_history_to_new_members">隐藏聊天记录</string>
    <string name="activity_group_manager_invite_member">通过链接邀请</string>
    <string name="activity_group_manager_make_private">设为私人</string>
    <string name="activity_group_manager_make_public">设为公开</string>
    <string name="activity_group_manager_manager">管理员</string>
    <string name="activity_group_manager_remove_bannered">解除禁言</string>
    <string name="activity_group_manager_remove_manager">移除管理员</string>
    <string name="activity_group_manager_remove_member">移除</string>
    <string name="activity_group_manager_show_history_to_new_members">分享聊天历史记录</string>
    <string name="activity_invitation_copy_success">邀请链接已复制到剪贴板</string>
    <string name="activity_main_chat_audio">语 音</string>
    <string name="activity_main_chat_clear_history">清除历史记录</string>
    <string name="activity_main_chat_delete">删除</string>
    <string name="activity_main_chat_delete_group">删除并退出</string>
    <string name="activity_main_chat_empty">暂无会话</string>
    <string name="activity_main_chat_file">文 件</string>
    <string name="activity_main_chat_image">图 片</string>
    <string name="activity_main_login_out">登出</string>
    <string name="boy">男</string>
    <string name="cancel">取消</string>
    <string name="clear_cache">清除缓存</string>
    <string name="dialog_add_member_et_hint">请输入平台对应用户唯一标示</string>
    <string name="dialog_add_member_title">添加成员</string>
    <string name="edit_profile_age">生日</string>
    <string name="edit_profile_avatar">头像</string>
    <string name="edit_profile_hometown">家乡</string>
    <string name="edit_profile_id">%1$sID</string>
    <string name="edit_profile_idd">ID</string>
    <string name="edit_profile_introduction">个性签名</string>
    <string name="edit_profile_namecard">主播名片</string>
    <string name="edit_profile_nickname">昵称</string>
    <string name="edit_profile_sex">性别</string>
    <string name="edit_profile_state">情感状况</string>
    <string name="edit_profile_title">编辑资料</string>
    <string name="girl">女</string>
    <string name="gph_copy_link">Copy Link</string>
    <string name="gph_more_by">More by @%1$s</string>
    <string name="gph_remove">Remove</string>
    <string name="gph_view_on_giphy">View on GIPHY</string>
    <string name="iamutkarshtiwari_github_io_ananas_beauty">Beauty</string>
    <string name="iamutkarshtiwari_github_io_ananas_brightness">Brightness</string>
    <string name="iamutkarshtiwari_github_io_ananas_crop">Crop</string>
    <string name="iamutkarshtiwari_github_io_ananas_edit">Edit</string>
    <string name="iamutkarshtiwari_github_io_ananas_filter">Filters</string>
    <string name="iamutkarshtiwari_github_io_ananas_rotate">Rotate</string>
    <string name="iamutkarshtiwari_github_io_ananas_saturation">Saturation</string>
    <string name="iamutkarshtiwari_github_io_ananas_stickers">Stickers</string>
    <string name="iamutkarshtiwari_github_io_ananas_text">Text</string>
    <string name="me_change_avatar">更换头像</string>
    <string name="me_select_from_gallery">从手机相册选择</string>
    <string name="me_take_picture">拍照</string>
    <string name="menu_settings">设定值</string>
    <string name="menu_title_search">搜索</string>
    <string name="network_usage">数据使用</string>
    <string name="no_data">没有数据</string>
    <string name="phone_permission_message">请授予“电话”权限以获取数据使用情况统计信息</string>
    <string name="provide_permission">提供权限</string>
    <string name="storage_usage">存储空间使用</string>
</resources>