<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/actionsView" android:background="@drawable/gph_action_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/gphActionRemove" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_remove" android:singleLine="true" style="@style/GphActionStyle.Remove" />
    <TextView android:id="@id/gphActionViewGiphy" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_view_on_giphy" android:singleLine="true" style="@style/GphActionStyle" />
    <TextView android:id="@id/gphActionMore" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_more_by" android:singleLine="true" style="@style/GphActionStyle" />
    <TextView android:id="@id/gphCopyLink" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_copy_link" android:singleLine="true" style="@style/GphActionStyle" />
</LinearLayout>