<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@color/transparent" android:paddingTop="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" style="@style/ToolBar">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@id/imgbtn_toolbar_back" android:layout_width="@dimen/toolbar_height" android:layout_height="@dimen/toolbar_height" app:tint="@color/colorSecondaryText" style="@style/ToolBarBackButton" />
            <TextView android:textSize="@dimen/text_size_md_title" android:textColor="@color/txt_color" android:id="@id/tv_toolbar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_profile_title" android:layout_centerVertical="true" android:layout_toEndOf="@id/imgbtn_toolbar_back" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout android:id="@id/edit_profile_rl_id" style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_idd" style="@style/Setting.ItemLeftText" />
        <TextView android:textColor="@color/yunkacolor_h" android:gravity="center|right" android:id="@id/edit_profile_tv_id_value" android:layout_marginRight="@dimen/setting_right_padding" android:text="@string/edit_profile_id" android:layout_alignParentLeft="false" android:layout_alignParentRight="true" style="@style/Setting.ItemLeftText" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_avatar" style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_avatar" style="@style/Setting.ItemLeftText" />
        <ImageView android:id="@id/edit_profile_drawee_avatar" android:layout_width="@dimen/avatar_size_default" android:layout_height="@dimen/avatar_size_default" android:layout_centerVertical="true" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_sex" style="@style/Setting.ItemLeftText" />
        <RadioGroup android:orientation="horizontal" android:id="@id/edit_profile_gp_sex" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginEnd="@dimen/activity_vertical_margin" android:layout_alignParentEnd="true">
            <RadioButton android:textColor="@drawable/sel_radio_txt_color" android:id="@id/userinfo_write_male" android:layout_width="50.0dip" android:layout_height="fill_parent" android:checked="true" android:button="@drawable/sel_login_sex_radio" android:text="@string/boy" />
            <RadioButton android:textColor="@drawable/sel_radio_txt_color" android:id="@id/userinfo_write_female" android:layout_width="30.0dip" android:layout_height="fill_parent" android:button="@drawable/sel_login_sex_radio" android:text="@string/girl" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_nickname" android:layout_width="wrap_content" style="@style/Setting.Item">
        <TextView android:id="@id/edit_profile_tv_nickname_label" android:text="@string/edit_profile_nickname" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_introduction" style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_introduction" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_introduction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/userbirthday" style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_age" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_birthday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_hometown" style="@style/Setting.Item">
        <TextView android:id="@id/edit_profile_tv_hometown_label" android:text="@string/edit_profile_hometown" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_hometown" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_state" style="@style/Setting.Item">
        <TextView android:id="@id/edit_profile_tv_state_label" android:text="@string/edit_profile_state" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/edit_profile_rl_namecard" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Setting.Item">
        <TextView android:text="@string/edit_profile_namecard" style="@style/Setting.ItemLeftText" />
        <TextView android:textSize="@dimen/text_size_md_body" android:textColor="@color/yunkacolor_h" android:id="@id/edit_profile_tv_namecard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:paddingEnd="@dimen/setting_left_padding" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>