<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/md_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:theme="@style/AppTheme.AppBarOverlay" />
    <TextView android:textSize="16.0sp" android:text="@string/storage_usage" style="@style/SettingsItemHeaderText" />
    <FrameLayout android:id="@id/flClearCache" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="start|center" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_cache" style="@style/SettingsItemText" />
        <TextView android:textColor="@color/header_text_settings" android:layout_gravity="end" android:id="@id/tvCacheSize" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" style="@style/SettingsItemText" />
    </FrameLayout>
    <TextView android:textSize="16.0sp" android:text="@string/network_usage" style="@style/SettingsItemHeaderText" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llNoPermissions" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_large" android:textColor="@color/text_settings" android:id="@id/tvNoData" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_data" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_settings" android:gravity="center" android:id="@id/tvPermission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/phone_permission_message" android:layout_marginStart="@dimen/activity_padding" android:layout_marginEnd="@dimen/activity_padding" />
        <Button android:textColor="@color/white" android:id="@id/btn_grant_permission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/provide_permission" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:backgroundTint="@color/imPrimary" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rvStatistics" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>